# MOE_sim

./: .gitignore  CMakeLists.txt  README.md
include/: Eqns.hpp  ExtraMassProps.hpp  G.hpp  M.hpp  MeiiModel.hpp  MoeModel.hpp  V.hpp  dll.hpp  mass_properties.hpp  nathanisdumb.hpp
matlab/: MOE_dynamics.asv  MOE_dynamics.m
matlab/Equations/: G.txt  M.txt  V.txt
src/: MoeModel.cpp  dll.cpp  dll_virtual.cpp  test.cpp  tuner.cpp
unity/MOE_sim/: .gitignore
unity/MOE_sim/Assets/Objects/MOE_Fx/: MOE_Fx.mtl
unity/MOE_sim/Assets/Objects/MOE_Fx_PostShoulder/: MOE_Fx_PostShoulder.mtl
unity/MOE_sim/Assets/Objects/MOE_Fx_PreShoulder/: MOE_Fx_PreShoulder.mtl
unity/MOE_sim/Assets/Objects/MOE_J0/: MOE_J0.mtl
unity/MOE_sim/Assets/Objects/MOE_J0/MOE_J0_counterweight/: MOE_J0_counterweight.mtl
unity/MOE_sim/Assets/Objects/MOE_J0/MOE_J0_main/: MOE_J0_main.mtl
unity/MOE_sim/Assets/Objects/MOE_J0/MOE_J0_slider/: MOE_J0_slider.mtl
unity/MOE_sim/Assets/Objects/MOE_J1/: MOE_J1.mtl
unity/MOE_sim/Assets/Objects/MOE_J2/: MOE_J2.mtl
unity/MOE_sim/Assets/Objects/MOE_J3/: MOE_J3.mtl
unity/MOE_sim/Assets/Resources/Materials/: Acryllic.mat  Plastic.mat  Stainless Steel.mat  black.mat  coating.mat  lead.mat
unity/MOE_sim/Assets/Scenes/: SampleScene.unity
unity/MOE_sim/Assets/Scripts/: InputTorqueScript.cs  MOE_Script.cs  MouseOrbit.cs  Native.cs  SimpleCameraController.cs
unity/MOE_sim/Logs/: ApiUpdaterCheck.txt
unity/MOE_sim/ProjectSettings/: EditorBuildSettings.asset  InputManager.asset  ProjectSettings.asset
util/: convert_mass_properties.py  correctequations.py  correctequations_casadi.py
util/ConsoleApp1/ConsoleApp1/: Program.cs
util/mass_properties/: Joint0_mass_properties.json  Joint1_mass_properties.json  Joint2_mass_properties.json  Joint3_mass_properties.json
